Update db.json, index.html, start.bat

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!-- cara 1 -->
 
 <!-- a). paste kode di bwah ini dlu di terminal:
-cd "C:\RPL_004\freshfruit-static"
+ npm install
+cd "C:\RPL_004\freshfruit-store"
 
 <!-- b). paste :
  (node server.js)pasang di terminal  --
@@ -14,8 +15,9 @@ cd "C:\RPL_004\freshfruit-static"
 
 <!-- CARA 2  -->
 <!-- bisa langsung ketik di terminal :
-  cd "C:\RPL_004\freshfruit-static"
-  2. LALU KETIK (npm start) di terminal terus salin http nya contoh (http://localhost:3000)     -->
+  1. cd "C:\RPL_004\freshfruit-store"
+  2. npm install
+  3. LALU KETIK (npm start) di terminal terus salin http nya contoh (http://localhost:3000)     -->
 
 <!-- cara 3 -->
 <!-- langsung klik 2 kali bagian start di folder, buka di file menager  -->
